@@ -17,11 +17,14 @@ package org.openntf.xsp.jakarta.servlet.webapp;
 
 import java.io.IOException;
 import java.text.MessageFormat;
+import java.util.Arrays;
 
+import org.openntf.xsp.jakarta.cdi.util.DiscoveryUtil;
 import org.openntf.xsp.jakartaee.servlet.ServletUtil;
 
 import com.ibm.commons.util.StringUtil;
 
+import jakarta.enterprise.inject.spi.CDI;
 import jakarta.servlet.Servlet;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -33,7 +36,7 @@ import jakarta.servlet.http.HttpServletResponse;
  * 
  * <p>Users can specify the Jakarta Servlet class name either by specifying the
  * {@value #INIT_PARAM_SERVLETCLASS} init parameter or
- * by subclassing this and overriding {@link #getJakartaServletClassName()}.
+ * by subclassing this and overriding {@link #getJakartaServletClassName()}.</p>
  *  
  * @author Jesse Gallagher
  * @since 2.8.0
@@ -56,8 +59,12 @@ public class JakartaServletFacade extends javax.servlet.http.HttpServlet {
 		try {
 			@SuppressWarnings("unchecked")
 			Class<? extends Servlet> delegateClass = (Class<? extends Servlet>) Class.forName(className, true, Thread.currentThread().getContextClassLoader());
-			this.delegate = delegateClass.newInstance();
-		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+			if(Arrays.stream(delegateClass.getAnnotations()).anyMatch(DiscoveryUtil::isBeanDefining)) {
+				this.delegate = CDI.current().select(delegateClass).get();
+			} else {
+				this.delegate = delegateClass.getConstructor().newInstance();
+			}
+		} catch (Exception e) {
 			throw new javax.servlet.ServletException(MessageFormat.format("Encountered exception loading Servlet of class {0}", className), e);
 		}
 		
